SocialMediaButtons: small alignment fix

--- a/components/SocialMediaButtons/style.module.less
+++ b/components/SocialMediaButtons/style.module.less
@@ -12,6 +12,8 @@
 }
 
 .link {
+    display: inline-block;
+    
     &:not(:first-child) {
         margin-left: 1rem;
     }
